# K-engine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  changelog.md  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
Engine/: Engine.cpp  Engine.h
src/: main.cpp
src/Engine/: Engine.cpp  Engine.h  ErrorHandler.h  Settings.cpp  Settings.h
src/Engine/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.h  Errors.h
src/Engine/GUI/: SDLUtils.cpp  SDLUtils.hpp
src/Engine/projects/: project.h
